--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,8 @@ body,td,th {
       <tr>
         <td width="32%"><img src="logo BURROS.jpg" width="162"  height="50" /></a></td>
         <td width="43%"><div align="center"><a href="index.html">INICIO</a> <a href="promo.html">PROMOS</a></div></td>
-        <td width="25%"><a href="https://www.google.com/maps/place/Burros+parra/@30.7146612,-112.1534443,20z/data=!4m17!1m10!4m9!1m4!2m2!1d-113.4886912!2d31.3393152!4e1!1m3!2m2!1d-112.1529865!2d30.7140021!3m5!1s0x86d314866c29f657:0xb940d3259c925d2d!8m2!3d30.7140117!4d-112.153088!16s%2Fg%2F11c5jwnwsh?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D"><img src="facebook.png"  height="45" /><img src="UBI.jpg" width="62"height="52"></a></td>
+        <td width="12%"><a href="https://www.facebook.com/p/Burros-el-Parra-100063604629795/"><img src="facebook.png"  height="45" /></a></td>
+        <td width="13%"><a href="https://www.google.com/maps/place/Burros+parra/@30.7146612,-112.1534443,20z/data=!4m17!1m10!4m9!1m4!2m2!1d-113.4886912!2d31.3393152!4e1!1m3!2m2!1d-112.1529865!2d30.7140021!3m5!1s0x86d314866c29f657:0xb940d3259c925d2d!8m2!3d30.7140117!4d-112.153088!16s/g/11c5jwnwsh?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw=="><img src="UBI.jpg" width="62"height="52"></a></td>
         
       </tr>
     </table>
