--- a/promo.html
+++ b/promo.html
@@ -53,7 +53,8 @@
       <tr>
         <td width="32%"><img src="logo BURROS.jpg" width="161"  height="50" /></td>
         <td width="45%"><div align="center"><a href="menu.html">MENU</a> <a href="index.html">INICIO</a></div></td>
-        <td width="23%"><div align="left"><a href="https://www.google.com/maps/place/Burros+parra/@30.7146612,-112.1534443,20z/data=!4m17!1m10!4m9!1m4!2m2!1d-113.4886912!2d31.3393152!4e1!1m3!2m2!1d-112.1529865!2d30.7140021!3m5!1s0x86d314866c29f657:0xb940d3259c925d2d!8m2!3d30.7140117!4d-112.153088!16s%2Fg%2F11c5jwnwsh?entry=ttu&amp;g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D"><img src="facebook.png" width="42"  height="44" /><img src="UBI.jpg" width="69" height="50" /></a></div></td>
+        <td width="11%"><div align="left"><a href="https://www.facebook.com/p/Burros-el-Parra-100063604629795/"><img src="facebook.png" width="42"  height="44" /></a></div></td>
+        <td width="12%"><a href="https://www.google.com/maps/place/Burros+parra/@30.7146612,-112.1534443,20z/data=!4m17!1m10!4m9!1m4!2m2!1d-113.4886912!2d31.3393152!4e1!1m3!2m2!1d-112.1529865!2d30.7140021!3m5!1s0x86d314866c29f657:0xb940d3259c925d2d!8m2!3d30.7140117!4d-112.153088!16s%2Fg%2F11c5jwnwsh?entry=ttu&amp;g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D"><img src="UBI.jpg" width="69" height="50" /></a></td>
       </tr>
     </table>
   </div>
